# looper

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODEX_BUILD_PROMPT.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/history/: README.md
examples/: README.md
examples/agent_instructions/: looper.yaml
examples/agent_instructions/evals/: gate_no_unsafe_override.py
examples/agent_instructions/instructions/: AGENTS.md
examples/mcp_tool_selection/: looper.yaml
examples/mcp_tool_selection/evals/: run_eval.py
examples/prompt_optimization/: looper.yaml
examples/prompt_optimization/evals/: gate_no_forbidden.py  run_eval.py
examples/prompt_optimization/prompts/: support_agent.md
examples/repo_dogfood/: looper.yaml  target_README.md
examples/repo_dogfood/evals/: gate_readme.py
examples/tool_schema/: looper.yaml
examples/tool_schema/evals/: gate_valid_schema.py
examples/tool_schema/schemas/: lookup_customer.json
looper/: cli.py
looper/core/: command_env.py  config.py  diffs.py  engine.py  errors.py  gates.py  integrity.py  models.py  mutator.py  process.py  report.py  review.py  runner.py  selector.py  state.py  workspace.py
looper/templates/: dashboard.css
looper/templates/examples/: README.md
looper/templates/examples/agent_instructions/evals/: run_eval.py
looper/templates/examples/mcp_tool_selection/: looper.yaml
looper/templates/examples/mcp_tool_selection/evals/: gate_valid_mcp_tools.py  run_eval.py
looper/templates/examples/mcp_tool_selection/mutators/: improve_mcp_tools.py
looper/templates/examples/mcp_tool_selection/server/: tools.json
looper/templates/examples/prompt_optimization/: looper.yaml
looper/templates/examples/repo_dogfood/evals/: run_eval.py
looper/templates/examples/repo_dogfood/mutators/: improve_readme.py
looper/templates/examples/tool_schema/evals/: run_eval.py
looper/templates/examples/tool_schema/mutators/: improve_schema.py
tests/: test_cli.py  test_config.py  test_engine_hardening.py  test_mutator.py  test_runner.py  test_selector.py  test_workspace.py
