[project]
name = "looper-agent"
dynamic = ["version"]
description = "Set up self-improving loops for your agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "deadshot888" }
]
keywords = ["agents", "evals", "cli", "optimization", "prompts", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
  "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.15",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.11",
  "twine>=6.0",
  "types-PyYAML>=6.0",
]

[project.scripts]
looper = "looper.cli:app"

[project.urls]
Homepage = "https://github.com/deadshot888/looper"
Repository = "https://github.com/deadshot888/looper"
Issues = "https://github.com/deadshot888/looper/issues"
Changelog = "https://github.com/deadshot888/looper/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["looper"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["examples/substack_looping_article"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["looper"]

[tool.hatch.build.targets.wheel.force-include]
"examples/agent_instructions" = "looper/templates/examples/agent_instructions"
"examples/mcp_tool_selection" = "looper/templates/examples/mcp_tool_selection"
"examples/prompt_optimization" = "looper/templates/examples/prompt_optimization"
"examples/repo_dogfood" = "looper/templates/examples/repo_dogfood"
"examples/tool_schema" = "looper/templates/examples/tool_schema"

[tool.hatch.version]
path = "looper/__init__.py"
